page consolidation and rewrites to maker info

--- a/docs/hotspot-makers/hotspot-makers.mdx
+++ b/docs/hotspot-makers/hotspot-makers.mdx
@@ -1,7 +1,11 @@
 ---
-id[](hotspot-manufacturers) ti[tle](Approved Hotspot Makers) pa[gination_label](Approved Hotspot
-Makers) si[debar_label](Approved Makers) de[scription](Helium Documentation)
-im[age](https://docs.helium.com/img/link-image.png) sl[ug](/hotspot-makers/hotspot-manufacturers)
+id: hotspot-makers
+title: Approved Hotspot Makers
+pagination_label: Approved Hotspot Makers
+sidebar_label: Approved Makers
+description: Helium Documentation
+image: https://docs.helium.com/img/link-image.png
+slug: /hotspot-makers
 ---
 
 :::caution Be Careful and Do Your Own Research
