build errors and page redirects

--- a/docs/hotspot-makers/hotspot-makers.mdx
+++ b/docs/hotspot-makers/hotspot-makers.mdx
@@ -114,7 +114,7 @@ onboard their unique Hotspots before they are granted access to the blockchain.
 ## EDATEC / EDA-IoT
 
 - [Website](https://www.eda-iot.com)
-- [Support](support@edatec.cn)
+- [Support](mailto:support@edatec.cn)
 - [Discord](https://discord.gg/SKwEeSreJu)
 - [iOS App](https://apps.apple.com/us/app/eda-iot-hotspot/id1629546243)
 - [Android App](https://play.google.com/store/apps/details?id=com.edaiot.makerapp)
@@ -177,7 +177,7 @@ onboard their unique Hotspots before they are granted access to the blockchain.
 ## KS Technologies
 
 - [Website](https://kstechnologies.com/)
-- [Support](info@kstechnologies.com)
+- [Support](mailto:info@kstechnologies.com)
 - [Android App](https://kstechnologies.com/affinity/affinitySetup#mobile)
 - [IOT Hotspot HIP19 Application](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/ks-technologies.md)
 
@@ -196,7 +196,7 @@ onboard their unique Hotspots before they are granted access to the blockchain.
 ## LongAP/HeNet BV
 
 - [Website](https://www.longap.com)
-- [Support](support@longap.co))
+- [Support](mailto:support@longap.co))
 - [Discord](https://discord.gg/n3E3gvZr6b)
 - [Local Dashboard](http://dashboard.longap.com/)
 - Onboarding Maker Address:
@@ -205,7 +205,7 @@ onboard their unique Hotspots before they are granted access to the blockchain.
 ## MerryIoT (Browan)
 
 - [Website](https://www.browan.com/)
-- [Support](support@merryiot.com)
+- [Support](mailto:support@merryiot.com)
 - [iOS App](https://apps.ios.com/us/app/merryiot-hotspot/id1615538142)
 - [Android App](https://play.google.com/store/apps/details?id=com.merryiot.makerapp)
 - IOT Hotspot HIP19 Application:
@@ -224,7 +224,7 @@ onboard their unique Hotspots before they are granted access to the blockchain.
 
 ## Milesight IoT
 
-- [Website](www.milesight-iot.com)
+- [Website](https://www.milesight-iot.com)
 - [Discord ](https://discord.gg/2wAbU4eyRy)
 - [Android App](https://play.google.com/store/apps/details?id=com.milesight.hotspot)
 - [IOT Hotspot HIP19 Application](https://github.com/helium/HIP/blob/bd53cbb57621b63b832163960ea2dd8fb78b1c72/0019-third-party-manufacturers/Milesight%20IoT.md)
@@ -323,13 +323,13 @@ onboard their unique Hotspots before they are granted access to the blockchain.
 ## Smart Harvest
 
 - [Website](https://smartharvest.ca/)
-- [Support](support@smartharvest.ca)
+- [Support](mailto:@smartharvest.ca)
 - [IOT Hotspot HIP19 Application](https://github.com/SmartHarvestInstruments/HIP/blob/master/0019-third-party-manufacturers/smart-harvest-instruments.md)
 
 ## SONoC
 
 - [Website](https://sonoc.tw/)
-- [Support](support@SONoC.tw)
+- [Support](mailto:support@SONoC.tw)
 - [Discord](https://discord.com/invite/jVRadSDNew)
 - [IOT Hotspot HIP19 Application](https://github.com/dewi-alliance/hotspot-manufacturers/blob/0d50f13b6942de34dcbf87b64f8d795f4c57189f/SONoC.md)
 
@@ -342,7 +342,7 @@ onboard their unique Hotspots before they are granted access to the blockchain.
 ## uGWAN Pro (Amber Link)
 
 - [Website](https://www.ugwan.io/)
-- [Support](support@ugwan.io)
+- [Support](mailto:support@ugwan.io)
 - [iOS App](https://apps.apple.com/us/app/1645839473)
 - [Android App](https://play.google.com/store/apps/details?id=com.amberlink.ugapp)
 - [IOT Hotspot HIP19 Application](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/ugwan-pro-ecc608.md)
