--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -51,7 +51,7 @@ Some notable features:
 - Exchange one Helium token for another or SOL
 
 All Hotspot Management (diagnostics, asserting location, adding Hotspots, etc) should be done via
-the [Maker Apps](/hotspot-makers/maker-apps) available from the manufacturer.
+the [Maker Apps](/hotspot-makers) available from the manufacturer.
 
 ## Wallets and Accounts
 
@@ -103,11 +103,8 @@ There is a limit of 10 wallet accounts (testnet + mainnet combined) per install.
 
 The Helium wallet will display the quantity in your wallet and price for:
 
-  HNT - in USD or your defined currency
-  MOBILE - in USD or your defined currency
-  IOT- in USD or your defined currency
-  DC- in USD (Not transferable)
-  SOL- in USD or your defined currency
+HNT - in USD or your defined currency MOBILE - in USD or your defined currency IOT- in USD or your
+defined currency DC- in USD (Not transferable) SOL- in USD or your defined currency
 
 No other tokens held in your wallet will be displayed, the value of other tokens will not be shown.
 
