--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -27,7 +27,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
             <a href="/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing">
               <span class="badge badge--secondary">Maker Approval</span>
             </a>
-            <a href="/hotspot-makers/maker-apps">
+            <a href="/hotspot-makers">
               <span class="badge badge--secondary">Maker Apps</span>
             </a>
             <a href="/mine-hnt/understanding-hotspot-status">
@@ -104,7 +104,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <h3>Maker Apps</h3>
         <p style={{ marginBottom: 40 }}>
           Makers have their own App to perform Hotspot onboarding, diagnostics, and troubleshooting.{' '}
-          <a href="/hotspot-makers/maker-apps">Read more here</a>
+          <a href="/hotspot-makers/maker-app-requirements">Read more here</a>
         </p>
       </div>
     </div>
