OG Hotspot support pages marked draft
pages still exist in repo, but wont be published

--- a/docs/troubleshooting/replace-sd-card.mdx
+++ b/docs/troubleshooting/replace-sd-card.mdx
@@ -6,6 +6,7 @@ sidebar_label: Replacing SD Card
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /troubleshooting/replace-sd-card
+draft: True
 ---
 
 # Replacing SD Card (Original Helium Hotspots)
