--- a/docs/mine-hnt/understanding-hotspot-status.mdx
+++ b/docs/mine-hnt/understanding-hotspot-status.mdx
@@ -6,6 +6,7 @@ sidebar_label: Understanding Hotspot Status
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /mine-hnt/understanding-hotspot-status
+draft: True
 ---
 
 # Hotspot Status
