--- a/docs/troubleshooting/hotspot-led.mdx
+++ b/docs/troubleshooting/hotspot-led.mdx
@@ -6,6 +6,7 @@ sidebar_label: Hotspot LED Meaning
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /troubleshooting/hotspot-led
+draft: True
 ---
 
 # Hotspot LED Meaning
