--- a/docs/troubleshooting/witnesses.mdx
+++ b/docs/troubleshooting/witnesses.mdx
@@ -6,6 +6,7 @@ sidebar_label: Understanding Witnesses And Relayed Hotspots
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /troubleshooting/understanding-witnesses
+draft: True
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
