more old pages marked as drafts

--- a/docs/mine-hnt/helium-hotspot-app.mdx
+++ b/docs/mine-hnt/helium-hotspot-app.mdx
@@ -6,6 +6,7 @@ sidebar_label: Helium Hotspot App
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /mine-hnt/helium-hotspot-app
+draft: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
