--- a/docs/troubleshooting/network-troubleshooting.mdx
+++ b/docs/troubleshooting/network-troubleshooting.mdx
@@ -6,7 +6,7 @@ sidebar_label: Network Troubleshooting
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /troubleshooting/network-troubleshooting
-draft: True
+draft: true
 ---
 
 # Network Troubleshooting
