--- a/docs/wallets/app-wallet/discovery-mode.mdx
+++ b/docs/wallets/app-wallet/discovery-mode.mdx
@@ -6,6 +6,7 @@ sidebar_label: Discovery Mode
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /wallets/app-wallet/discovery-mode
+draft: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
