--- a/docs/wallets/app-wallet/rak-hotspot.mdx
+++ b/docs/wallets/app-wallet/rak-hotspot.mdx
@@ -6,6 +6,7 @@ sidebar_label: RAK Hotspot Setup
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /wallets/app-wallet/rak-hotspot-setup
+draft: true
 ---
 
 # RAK Hotspot Setup
