--- a/docs/troubleshooting/hotspot-setup.mdx
+++ b/docs/troubleshooting/hotspot-setup.mdx
@@ -6,7 +6,7 @@ sidebar_label: Hotspot Setup
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /wallets/app-wallet/hotspot-setup-troubleshooting
-draft: True
+draft: true
 ---
 
 # Hotspot Setup Troubleshooting
