--- a/docs/wallets/app-wallet/deep-links-and-qr-codes.mdx
+++ b/docs/wallets/app-wallet/deep-links-and-qr-codes.mdx
@@ -6,6 +6,7 @@ sidebar_label: Deep Links And QR Codes
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /wallets/app-wallet/deep-links-and-qr-codes
+draft: true
 ---
 
 # Deep Links and QR Codes
