--- a/docs/wallets/app-wallet/transaction-failures.mdx
+++ b/docs/wallets/app-wallet/transaction-failures.mdx
@@ -6,6 +6,7 @@ sidebar_label: Transaction Failures
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /wallets/app-wallet/transaction-failures
+draft: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
