--- a/docs/wallets/app-wallet/transfer-hotspot.mdx
+++ b/docs/wallets/app-wallet/transfer-hotspot.mdx
@@ -6,6 +6,7 @@ sidebar_label: Transfer Hotspot
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /wallets/app-wallet/transfer-hotspot
+draft: true
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
