removing cross links

--- a/docs/solana/migration/wallet-user.mdx
+++ b/docs/solana/migration/wallet-user.mdx
@@ -33,9 +33,8 @@ import { MigrateWallet } from '@theme/MigrateWallet'
 
 :::caution
 
-The [Helium Hotspot App](/mine-hnt/helium-hotspot-app) is no longer used to manage Tokens or perform
-Wallet activities and instead is only used to manage Original Helium Hotspots and FreedomFi
-Hotspots.
+The Helium Hotspot App is no longer used to manage Tokens or perform Wallet activities and instead
+is only used to manage Original Helium Hotspots and FreedomFi Hotspots.
 
 :::
 
