frontmatter fixups and sidebar adjustments

--- a/docs/hotspot-makers/iot/full-hotspots.mdx
+++ b/docs/hotspot-makers/iot/full-hotspots.mdx
@@ -5,7 +5,7 @@ pagination_label: Full Hotspots
 sidebar_label: Full Hotspots
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /mine-hnt/full-hotspots
+slug: /hotspot-makers/iot/full-hotspots
 ---
 
 # Full Hotspots
