--- a/docs/network-iot/lorawan-roaming-getting-started.mdx
+++ b/docs/network-iot/lorawan-roaming-getting-started.mdx
@@ -1,11 +1,11 @@
 ---
-id: roaming-getting-started
+id: lorawan-roaming-quickstart
 title: Getting started with Roaming
 pagination_label: Roaming Getting Started
 sidebar_label: Roaming Quickstart
 description: Helium Roaming Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /lorawan-on-helium/lorawan-roaming-getting-started
+slug: /iot/lorawan-roaming-quickstart
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
