--- a/docs/network-iot/open-lns-getting-started.mdx
+++ b/docs/network-iot/open-lns-getting-started.mdx
@@ -1,11 +1,11 @@
 ---
-id: open-lns-configuration
+id: open-lns-quickstart
 title: Getting started with Open LNS
 pagination_label: Run and LNS
 sidebar_label: Run an LNS
 description: Helium Open LNS Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /lorawan-on-helium/open-lns-configuration
+slug: /iot/open-lns-quickstart
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
