--- a/docs/network-iot/proof-of-coverage.mdx
+++ b/docs/network-iot/proof-of-coverage.mdx
@@ -1,11 +1,11 @@
 ---
-id: iot-proof-of-coverage
+id: iot-poc
 title: IOT Proof of Coverage Roadmap
 pagination_label: Proof of Coverage Roadmap
 sidebar_label: Proof of Coverage Roadmap
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /lorawan-on-helium/iot-proof-of-coverage
+slug: /iot/proof-of-coverage
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
