--- a/docs/faq/open-source.mdx
+++ b/docs/faq/open-source.mdx
@@ -4,7 +4,7 @@ title: Open Source
 pagination_label: Open Source
 sidebar_label: Open Source
 description: Open Source
-# Image:
+image: https://docs.helium.com/img/link-image.png
 slug: /faq/open-source
 ---
 
