--- a/docs/network-iot/coverage-mapping/coverage-mapping.mdx
+++ b/docs/network-iot/coverage-mapping/coverage-mapping.mdx
@@ -5,7 +5,7 @@ pagination_label: Coverage Mapping
 sidebar_label: Coverage Mapping
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /use-the-network/coverage-mapping
+slug: /iot/coverage-mapping
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
