--- a/docs/network-iot/denylist.mdx
+++ b/docs/network-iot/denylist.mdx
@@ -5,7 +5,7 @@ pagination_label: Denylist
 sidebar_label: Denylist
 description: The Helium Network Denylist
 image: https://docs.helium.com/img/link-image.png
-slug: /mine-hnt/denylist
+slug: /iot/denylist
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
