--- a/docs/network-iot/frequency-plans/frequency-plans.mdx
+++ b/docs/network-iot/frequency-plans/frequency-plans.mdx
@@ -5,7 +5,7 @@ pagination_label: Frequency Plans
 sidebar_label: Frequency Plans
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /lorawan-on-helium/frequency-plans
+slug: /iot/frequency-plans
 ---
 
 # Frequencies on the Helium Network
