--- a/docs/network-iot/frequency-plans/region-plans.mdx
+++ b/docs/network-iot/frequency-plans/region-plans.mdx
@@ -5,7 +5,7 @@ pagination_label: Region Plans
 sidebar_label: Region Plans
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /lorawan-on-helium/region-plans
+slug: /iot/region-plans
 ---
 
 # Frequencies by Region on the Helium Network
