--- a/docs/network-iot/lorawan-roaming-on-helium.mdx
+++ b/docs/network-iot/lorawan-roaming-on-helium.mdx
@@ -1,11 +1,11 @@
 ---
-id: lorawan-roaming-on-helium
+id: lorawan-roaming
 title: LoRaWAN Roaming On Helium
 pagination_label: Roaming
 sidebar_label: Roaming
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /lorawan-on-helium/lorawan-roaming-on-helium
+slug: /iot/lorawan-roaming
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
