--- a/docs/network-iot/open-lns.mdx
+++ b/docs/network-iot/open-lns.mdx
@@ -5,7 +5,7 @@ pagination_label: Open LNS
 sidebar_label: Open LNS
 description: Helium Open LNS Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /lorawan-on-helium/open-lns
+slug: /iot/open-lns
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
