--- a/docs/network-iot/coverage-mapping/coverage-mapping.mdx
+++ b/docs/network-iot/coverage-mapping/coverage-mapping.mdx
@@ -238,7 +238,7 @@ projects using the same Decoded payload.
 
 A flow that sends data to all three projects would look similar to this:
 
-![Helium flow mappers](flow-mappers-cargo-coverage.png)
+<img className="docsheader" src={useBaseUrl('img/flow-mappers-cargo-coverage.png')} />
 
 ## Understanding the Mappers Visualization
 
