--- a/docs/network-iot/frequency-plans/frequency-plans.mdx
+++ b/docs/network-iot/frequency-plans/frequency-plans.mdx
@@ -26,7 +26,8 @@ transmit range to downlink frequencies and special configuration may be necessar
 
 ## Frequency Plans
 
-Each frequency/channel supports multiple spreading factors. Lower spreading factors correspond to higher data rates, but shorter transmission ranges and less receiver sensitivity. 
+Each frequency/channel supports multiple spreading factors. Lower spreading factors correspond to
+higher data rates, but shorter transmission ranges and less receiver sensitivity.
 
 ### US915
 
