reference link fixes

--- a/devblog/2021-02-16-maker-update/index.mdx
+++ b/devblog/2021-02-16-maker-update/index.mdx
@@ -25,7 +25,7 @@ A summary of how a Maker goes from HIP19-approved to market:
 5. The final stage of Network Integration is being able to add Hotspots to the Blockchain.
 
 To expand on Step 5, Makers will have to accomplish 4 additional milestones that is
-[documented here](https://docs.helium.com/mine-hnt/hotspot-makers):
+[documented here](https://docs.helium.com/hotspot-makers):
 
 &nbsp;
 
