--- a/devblog/2021-05-28-major-blockchain-release-validator-support.mdx
+++ b/devblog/2021-05-28-major-blockchain-release-validator-support.mdx
@@ -65,7 +65,7 @@ Mainnet. This activation date provides everyone an equal starting point to prepa
 validators.
 
 Please feel free to read [HIP 25](https://github.com/helium/HIP/blob/master/0025-validators.md), and
-[docs](https://docs.helium.com/mine-hnt/validators) for more information on Validators.
+docs for more information on Validators.
 
 This PR is also accompanied by a few smaller bug-fix PRs, notably:
 
