--- a/devblog/2021-06-24-blockchain-release-validator-and-state-channel-updates.mdx
+++ b/devblog/2021-06-24-blockchain-release-validator-and-state-channel-updates.mdx
@@ -15,9 +15,8 @@ which will get activated at a later date.
 
 - #### Miner Updates
 
-  This miner release includes Validator and JSON RPC support. Please feel free to read
-  [validator docs](https://docs.helium.com/mine-hnt/validators) and browse through the PRs listed
-  below for further details:
+  This miner release includes Validator and JSON RPC support. Please feel free to read validator
+  docs and browse through the PRs listed below for further details:
 
   - [miner#629](https://github.com/helium/miner/pull/629): Validator support
   - [miner#804](https://github.com/helium/miner/pull/804): JSON RPC support
