--- a/docs/archive/mine-hnt.mdx
+++ b/docs/archive/mine-hnt.mdx
@@ -21,10 +21,10 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
             manufacturers.
           </h2>
           <div>
-            <a href="/mine-hnt/full-hotspots">
+            <a href="/hotspot-makers/iot/full-hotspots">
               <span class="badge badge--secondary">Approved Makers</span>
             </a>
-            <a href="/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing">
+            <a href="/hotspot-makers/become-a-maker/maker-approval-auditing">
               <span class="badge badge--secondary">Maker Approval</span>
             </a>
             <a href="/hotspot-makers">
@@ -54,14 +54,14 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     </div>
     <div class="col col--5 col--offset-1 " style={{ marginBottom: 100 }}>
       <h5 style={{ marginTop: 0 }}>Quick Links</h5>
-      <a className="block" href="/mine-hnt/full-hotspots">
+      <a className="block" href="/hotspot-makers/iot/full-hotspots">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Approved Makers
       </a>
-      <a className="block" href="/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing">
+      <a className="block" href="/hotspot-makers/become-a-maker/maker-approval-auditing">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Maker Approval and
         Auditing
       </a>
-      <a className="block" href="/mine-hnt/data-only-hotspots">
+      <a className="block" href="/hotspot-makers/iot/data-only-hotspots">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Data Only Hotspots
       </a>
     </div>
@@ -73,7 +73,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <p style={{ marginBottom: 40 }}>
           These Hotspots maintain a full copy of the HNT blockchain, Participate in Proof of
           Coverage rewards, and get rewarded for forwarding Data Packets. Details{' '}
-          <a href="https://docs.helium.com/mine-hnt/full-hotspots">can be found here</a>.
+          <a href="https://docs.helium.com/hotspot-makers/iot/full-hotspots">can be found here</a>.
         </p>
       </div>
     </div>
@@ -83,7 +83,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <p style={{ marginBottom: 40 }}>
           These Hotspots participate in Proof of Coverage rewards, and get rewarded for forwarding
           Data Packets. Details{' '}
-          <a href="https://docs.helium.com/hotspot-makers/light-hotspots">can be found here</a>.
+          <a href="https://docs.helium.com/hotspot-makers/iot/light-hotspots">can be found here</a>.
         </p>
       </div>
     </div>
@@ -92,7 +92,10 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <h3>Data Only Hotspots</h3>
         <p style={{ marginBottom: 40 }}>
           These Hotspots get rewarded for forwarding Data Packets. Details{' '}
-          <a href="https://docs.helium.com/mine-hnt/data-only-hotspots">can be found here</a>.
+          <a href="https://docs.helium.com/hotspot-makers/iot/data-only-hotspots">
+            can be found here
+          </a>
+          .
         </p>
       </div>
     </div>
@@ -101,7 +104,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <h3>Maker Apps</h3>
         <p style={{ marginBottom: 40 }}>
           Makers have their own App to perform Hotspot onboarding, diagnostics, and troubleshooting.{' '}
-          <a href="/hotspot-makers/maker-app-requirements">Read more here</a>
+          <a href="/hotspot-makers/become-a-maker/maker-app-requirements">Read more here</a>
         </p>
       </div>
     </div>
