--- a/docs/hotspot-makers/become-a-maker/basic-miner-operation.mdx
+++ b/docs/hotspot-makers/become-a-maker/basic-miner-operation.mdx
@@ -35,8 +35,8 @@ In this guide, we will explain how to get a Docker image of the Helium Miner run
 LTS, and finally some tips on how to interact with a running Miner.
 
 When preparing the Miner for a Hotspot product, you will want to go a little further and follow the
-steps outlined [here](/mine-hnt/full-hotspots/become-a-maker/docker-integration), where you will
-learn how to integrate it with security modules and BLE.
+steps outlined [here](/hotspot-makers/become-a-maker/docker-integration), where you will learn how
+to integrate it with security modules and BLE.
 
 If you are interested in contributing to Miner development and code-review, please visit
 [the Miner's repository on Github](https://github.com/helium/miner).
