--- a/docs/hotspot-makers/become-a-maker/burn-hnt-to-maker-wallet.mdx
+++ b/docs/hotspot-makers/become-a-maker/burn-hnt-to-maker-wallet.mdx
@@ -12,9 +12,9 @@ slug: /hotspot-makers/become-a-maker/burn-hnt-to-maker-wallet
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-Any [approved Hotspot Maker](/mine-hnt/full-hotspots) is responsible for supplying Data Credits
-(DCs) to the onboarding server for Hotspots they sell. They do this by burning HNT to their specific
-maker address.
+Any [approved Hotspot Maker](/hotspot-makers/iot/full-hotspots) is responsible for supplying Data
+Credits (DCs) to the onboarding server for Hotspots they sell. They do this by burning HNT to their
+specific maker address.
 
 :::info
 
@@ -31,7 +31,7 @@ server. When a Hotspot is onboarded by your end customer, the onboarding server 
 it with your Maker ID, and associated Maker Wallet address. If, when a Hotspot is onboarded, it's
 present in the onboarding server and you have ample Data Credits to pay the onboarding fees, the
 blockchain will add the Hotspot. And if you've
-[integrated your Hotspot in the Hotspot App onboarding flow](/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing),
+[integrated your Hotspot in the Hotspot App onboarding flow](/hotspot-makers/become-a-maker/hotspot-integration-testing),
 the Wallet knows to use your approved Maker Wallet address. At this point, the Data Credits will be
 used for the transactions with your wallet address as the payer.
 
