--- a/docs/hotspot-makers/become-a-maker/docker-integration.mdx
+++ b/docs/hotspot-makers/become-a-maker/docker-integration.mdx
@@ -54,10 +54,9 @@ releases.
 The Docker image is tailored to be able to run very simply at first, but will generally require
 additional customization to integrate well with your host system.
 
-Start by following
-[these instructions](/mine-hnt/full-hotspots/become-a-maker/basic-miner-operation). If that ends up
-being no problem, then you're doing great! The extra sections in this guide will discuss things you
-should do when preparing a production system for the Miner container.
+Start by following [these instructions](/hotspot-makers/become-a-maker/basic-miner-operation). If
+that ends up being no problem, then you're doing great! The extra sections in this guide will
+discuss things you should do when preparing a production system for the Miner container.
 
 ## Omit REGION_OVERRIDE
 
