--- a/docs/hotspot-makers/become-a-maker/hotspot-wifi-configuration.mdx
+++ b/docs/hotspot-makers/become-a-maker/hotspot-wifi-configuration.mdx
@@ -13,8 +13,8 @@ slug: /hotspot-makers/become-a-maker/hotspot-wifi-configuration
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 The Helium Hotspot provides a WiFi configuration interface via the
-device's[ BLE services](/mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services). The following
-are instructions for how to configure a Hotspot's WiFi.
+device's[ BLE services](/hotspot-makers/become-a-maker/hotspot-ble-services). The following are
+instructions for how to configure a Hotspot's WiFi.
 
 ### Connecting to the Hotspot over Bluetooth Low Energy
 
@@ -72,7 +72,7 @@ are instructions for how to configure a Hotspot's WiFi.
 
 2. De-serialize the binary value into the WiFi Services
    [Protocol Buffers](https://developers.google.com/protocol-buffers) message found in
-   [BLE Services Docs](/mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services#wifiservices---characteristic).
+   [BLE Services Docs](/hotspot-makers/become-a-maker/hotspot-ble-services#wifiservices---characteristic).
    This will give you a list of available WiFi SSID string names.
 
 ### Set Credentials For WiFi Network
@@ -82,7 +82,7 @@ are instructions for how to configure a Hotspot's WiFi.
 
    1. Serialize your WiFi Connect [Protocol Buffer](https://developers.google.com/protocol-buffers)
       message, the definition of which is found in the
-      [BLE Services Sheet](/mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services#wificonnect---characteristic).
+      [BLE Services Sheet](/hotspot-makers/become-a-maker/hotspot-ble-services#wificonnect---characteristic).
    2. Write serialized Value to
 
       Service
