--- a/docs/hotspot-makers/iot/full-hotspots.mdx
+++ b/docs/hotspot-makers/iot/full-hotspots.mdx
@@ -13,8 +13,8 @@ slug: /hotspot-makers/iot/full-hotspots
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 Full Hotspots are Helium coverage providers that can participate in all potential reward activity
-available to Hotspots. Compared to a [Data Only Hotspots](/mine-hnt/data-only-hotspots), Full
-Hotspots are eligible for [Proof-of-Coverage](/blockchain/proof-of-coverage) Rewards.
+available to Hotspots. Compared to a [Data Only Hotspots](/hotspot-makers/iot/data-only-hotspots),
+Full Hotspots are eligible for [Proof-of-Coverage](/blockchain/proof-of-coverage) Rewards.
 
 Full Hotspots may only be manufactured by approved **Makers**. These are hardware vendors that have
 been approved by the Helium community and the [Helium Foundation](https://helium.foundation). This
@@ -50,11 +50,11 @@ onboard their unique Hotspots before they are granted access to the blockchain.
 
 ## Becoming a Maker
 
-- [Maker Approval and Auditing](/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing)
-- [Hotspot Integration Testing](/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing)
-- [Docker Integration](/mine-hnt/full-hotspots/become-a-maker/docker-integration)
-- [Security Requirements](/mine-hnt/full-hotspots/become-a-maker/security-requirements)
-- [Hotspot BLE Services](/mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services)
-- [Hotspot WiFi Configuration](/mine-hnt/full-hotspots/become-a-maker/hotspot-wifi-configuration)
-- [Burning HNT to your Maker Wallet](/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet)
-- [Create a Maker App](/hotspot-makers/maker-app-requirements)
+- [Maker Approval and Auditing](/hotspot-makers/become-a-maker/maker-approval-auditing)
+- [Hotspot Integration Testing](/hotspot-makers/become-a-maker/hotspot-integration-testing)
+- [Docker Integration](/hotspot-makers/become-a-maker/docker-integration)
+- [Security Requirements](/hotspot-makers/become-a-maker/security-requirements)
+- [Hotspot BLE Services](/hotspot-makers/become-a-maker/hotspot-ble-services)
+- [Hotspot WiFi Configuration](/hotspot-makers/become-a-maker/hotspot-wifi-configuration)
+- [Burning HNT to your Maker Wallet](/hotspot-makers/become-a-maker/burn-hnt-to-maker-wallet)
+- [Create a Maker App](/hotspot-makers/become-a-maker/maker-app-requirements)
