--- a/docs/network-iot/coverage-mapping/coverage-mapping.mdx
+++ b/docs/network-iot/coverage-mapping/coverage-mapping.mdx
@@ -10,7 +10,7 @@ slug: /iot/coverage-mapping
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-<img className="docsheader" src={useBaseUrl('img/use-the-network/coverage-mapping/header.png')} />
+<img className="docsheader" src={useBaseUrl('img/network-iot/coverage-mapping/header.png')} />
 
 The [Mappers Coverage map](https://mappers.helium.com) is a crowd-sourced effort to build a
 true-signal coverage map of the Helium network across the globe. By mapping real-world coverage,
@@ -58,10 +58,9 @@ features.
 
 ## Project Roadmap
 
-Take a look at the big picture in the
-[Mappers Roadmap](/use-the-network/coverage-mapping/mappers-roadmap). The roadmap is a great way to
-understand the full scope of the project and find an area to make your own contributions to the
-project.
+Take a look at the big picture in the [Mappers Roadmap](/iot/coverage-mapping/roadmap). The roadmap
+is a great way to understand the full scope of the project and find an area to make your own
+contributions to the project.
 
 ## Frequently Asked Questions
 
@@ -144,15 +143,15 @@ Generally, these devices are the most easy and accessible, requiring just power 
 ### Plug & Play
 
 Console-ready device that you onboard to spend your own Data Credits. The
-[Mappers Quickstart](/use-the-network/coverage-mapping/mappers-quickstart) guide focuses on the the
-Dragino LGT-92, but the steps are effectively the same for any mapping device.
+[Mappers Quickstart](/iot/coverage-mapping/quickstart) guide focuses on the the Dragino LGT-92, but
+the steps are effectively the same for any mapping device.
 
 - Adeunis Field Test Device
   - [Product page](https://www.adeunis.com/en/produit/ftd-network-tester/)
-  - [Adeunis tutorial](/use-the-network/coverage-mapping/adeunis-mapper)
+  - [Adeunis tutorial](/iot/coverage-mapping/adeunis-mapper)
 - Dragino LGT-92
   - [Product page](https://www.dragino.com/products/lora-lorawan-end-node/item/142-lgt-92.html)
-  - [Dragino LGT-92 tutorial](/use-the-network/coverage-mapping/mappers-quickstart)
+  - [Dragino LGT-92 tutorial](/iot/coverage-mapping/quickstart)
 - Fiz-Tech Mapper
   - [Product page](https://fiz-tech.net/search?type=tag&q=Mapper)
 - Glamos Walker
@@ -228,8 +227,7 @@ GPS-6502 and LilyGo TTGO T-Beam v1.1. Here are some approximate comparisons:
 ### Configuration Basics
 
 At its core, contributing to Helium Mappers is just a matter of delivering a specific payload
-through the console. Learn more about the
-[Mappers API](/use-the-network/coverage-mapping/mappers-api).
+through the console. Learn more about the [Mappers API](/iot/coverage-mapping/api).
 
 If your mapping device is delivering messages to Helium Mappers, you can also enable the
 integrations for [Cargo](/use-the-network/console/integrations/cargo/) and
