--- a/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
+++ b/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
@@ -246,7 +246,8 @@ echo $WALLET
 ```
 
 Ensure enough Data Credits (DC) to cover
-[cost of adding data-only hotspots and asserting location](/mine-hnt/data-only-hotspots) of each.
+[cost of adding data-only hotspots and asserting location](/hotspot-makers/iot/data-only-hotspots)
+of each.
 
 > e.g., For 20 instances of gateway-rs: 20 x (1000000 + 500000) at HNT prices in 2022Q2, this will
 > require 15 HNT. Plus **add for uplinks** from devices if on a non developer instance of router.
