--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -146,17 +146,17 @@ the two most relevant for developers using the Network.
         See the Map <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
       <h5>Quick Links</h5>
-      <a className="block" href="/use-the-network/coverage-mapping">
+      <a className="block" href="/iot/coverage-mapping">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Intro to Coverage
         Mappers
       </a>
-      <a className="block" href="/use-the-network/coverage-mapping/mappers-quickstart">
+      <a className="block" href="/iot/coverage-mapping/quickstart">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Mappers Quickstart
       </a>
-      <a className="block" href="/use-the-network/coverage-mapping/mappers-api">
+      <a className="block" href="/iot/coverage-mapping/api">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Mappers API
       </a>
-      <a className="block" href="/use-the-network/coverage-mapping/adeunis-mapper">
+      <a className="block" href="/iot/coverage-mapping/adeunis-mapper">
         <img className="docicon" src={useBaseUrl('img/icons/docicon.svg')} /> Adeunis Mapper
       </a>
     </div>
