--- a/docs/archive/helium-hotspot-app.mdx
+++ b/docs/archive/helium-hotspot-app.mdx
@@ -14,7 +14,7 @@ import TabItem from '@theme/TabItem'
 
 Nova Labs (formerly Helium Systems, Inc.) manufactured the first set of Hotspots on the Network.
 Nova Labs no longer manufacturers Hotspots, but there is now an extensive
-[list of manufacturers who sell approved Hotspots](/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing/).
+[list of manufacturers who sell approved Hotspots](/hotspot-makers).
 
 :::tip Wallet Functionality
 
