--- a/docs/home/home.mdx
+++ b/docs/home/home.mdx
@@ -67,8 +67,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         produce and are compensated in IOT, the native cryptocurrency of the Helium blockchain. The
         Helium blockchain is a new, open source, public blockchain created entirely to incentivize
         the creation of physical, decentralized wireless networks. Today, the Helium IoT Network,
-        and its <a href="https://explorer.helium.com/">hundreds of thousands of Hotspots</a>, provide
-        access to the largest LoRaWAN Network in the world.
+        and its <a href="https://explorer.helium.com/">hundreds of thousands of Hotspots</a>,
+        provide access to the largest LoRaWAN Network in the world.
       </p>
       <p>
         If, at any time, you don't find what you need, join us in{' '}
@@ -127,7 +127,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <a className="block" href="https://helium.com/mine">
         <img className="docicon" src={useBaseUrl('img/icons/dociconblue.svg')} /> Approved Hotspots
       </a>
-      <a className="block" href="/mine-hnt/full-hotspots/#becoming-a-maker">
+      <a className="block" href="/hotspot-makers/iot/full-hotspots#becoming-a-maker">
         <img className="docicon" src={useBaseUrl('img/icons/dociconblue.svg')} /> Become a Maker
       </a>
       <a className="block" href="/use-the-network/setup-a-packet-forwarder">
@@ -150,7 +150,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       <a className="block" href="/use-the-network/devices">
         <img className="docicon" src={useBaseUrl('img/icons/docicongreen.svg')} /> Devices
       </a>
-      <a className="block" href="/lorawan-on-helium/open-lns">
+      <a className="block" href="/iot/open-lns">
         <img className="docicon" src={useBaseUrl('img/icons/docicongreen.svg')} /> Open LNS
       </a>
       <a className="block" href="/lorawan-on-helium">
