--- a/docs/network-iot/crowdspot.mdx
+++ b/docs/network-iot/crowdspot.mdx
@@ -18,7 +18,7 @@ If a Hotspot has been added to the Denylist in error, the **only** method to hav
 file a Removal Request using [Crowdspot](https://crowdspot.io/).
 
 **Instructions for submitting a removal request can be found on the
-[Denylist Removal Request documentation page.](/mine-hnt/denylist-removals)**
+[Denylist Removal Request documentation page.](/iot/denylist-removals)**
 
 :::
 
@@ -474,6 +474,6 @@ If a Hotspot has been added to the Denylist in error, the **only** method to hav
 file a Removal Request using Crowdspot.
 
 **Instructions for submitting a removal request can be found on the
-[Denylist Removal Request documentation page.](/mine-hnt/denylist-removals)**
+[Denylist Removal Request documentation page.](/iot/denylist-removals)**
 
 :::
