--- a/docs/network-iot/lorawan-on-helium.mdx
+++ b/docs/network-iot/lorawan-on-helium.mdx
@@ -47,7 +47,7 @@ Integrity Check (MIC) to disambiguate.
 Starting in 2023, Helium will be utilizing an Open LNS Initiative to allow more choice and increase
 usability. You can read more about the Open LNS Initiative at the
 [Helium Foundation Blog](https://medium.com/helium-foundation/scaling-iot-growth-with-heliums-open-lns-initiative-c906e6953d6d)
-or read more [here](lorawan-on-helium/open-lns).
+or read more [here](/iot/open-lns).
 
 :::info
 
