--- a/docs/network-mobile/cbrs/5g-on-helium.mdx
+++ b/docs/network-mobile/cbrs/5g-on-helium.mdx
@@ -19,9 +19,9 @@ requirements) and the physics of wireless radio, requiring denser networks with 
 increasing site acquisition costs.
 
 The Helium model decentralizes these costs and enables communities to participate in building
-reliable, high-bandwidth networks using technologies like [CBRS](./5g-on-helium/cbrs-radios) and
-Wi-Fi. We see service providers as a critical component of this ecosystem rather than replacing
-service providers altogether.
+reliable, high-bandwidth networks using technologies like [CBRS](/mobile/cbrs-radios) and Wi-Fi. We
+see service providers as a critical component of this ecosystem rather than replacing service
+providers altogether.
 
 :::tip Purchase a 5G Hotspot and CBRS Small Cell Radios
 
@@ -87,8 +87,8 @@ rewards. 100M (million) tokens will be programmatically issued per day to all ac
 Hotspots during the Genesis period.
 
 Details of the proportional mining rewards for active 5G Small Cell Radios
-[can be found here.](/5g-on-helium/mobile-poc) Any MOBILE not mined during the Genesis period may be
-reallocated to Grants and Operations.
+[can be found here.](/mobile/proof-of-coverage) Any MOBILE not mined during the Genesis period may
+be reallocated to Grants and Operations.
 
 ### Grants and Operations
 
@@ -155,7 +155,7 @@ for all new subDAOs in Phase 2 of
 
 A 5G Hotspot with an attached and properly registered Small Cell Radio will start earning MOBILE
 automatically as one "lump sum" to the associated Hotspot. You can learn more about calculating
-MOBILE Rewards in the [MOBILE Proof of Coverage](/5g-on-helium/mobile-poc) documentation.
+MOBILE Rewards in the [MOBILE Proof of Coverage](/mobile/proof-of-coverage) documentation.
 
 Interacting with MOBILE tokens is only possible using the
 [Helium Wallet App](./wallets/helium-wallet-app). Be sure to update the Helium Wallet app to the
