--- a/docs/network-mobile/proof-of-coverage.mdx
+++ b/docs/network-mobile/proof-of-coverage.mdx
@@ -262,8 +262,7 @@ Modeled Coverage Explorer is available [here](https://coverage-explorer.herokuap
 :::
 
 Modeled Coverage data will play a key role in providing information to visualize it, with more data
-added as additional external sources (e.g., [Mobile Mappers](/5g-on-helium/mobile-mappers)) come
-into play.
+added as additional external sources (e.g., [Mobile Mappers](mobile/mappers)) come into play.
 
 HIP-74 proposed the creation of a new Mobile Explorer dedicated exclusively to the MOBILE Network as
 adding more features and data for MOBILE Rewards to the IOT Network Explorer becomes practically
